--- a/src/App.css
+++ b/src/App.css
@@ -28,15 +28,13 @@ body {
 }
 
 .bg-gray-900 {
-  background-color: #111827;
+  background-color: #121212;
 }
 
-.bg-gray-800 {
-  background-color: #1f2937;
-}
+
 
 .border-gray-700 {
-  border-color: #374151;
+  border-color: #373e51;
 }
 
 .shadow-2xl {
